--- a/index.html
+++ b/index.html
@@ -95,15 +95,8 @@
 
             <div class="shopping-cart center" id="cart">
 
-                <div class="column-labels">
-                    <label class="product-image">Image</label>
-                    <label class="product-details">Product</label>
-                    <label class="product-price">Price</label>
-                    <label class="product-quantity">Quantity</label>
-                    <label class="product-removal">Remove</label>
-                    <label class="product-line-price">Total</label>
-                </div>
-
+                <p class="cart_title">Корзина</p>
+                <div class="cart_underline"></div>
                 <div class="product">
                     <div class="product-image">
                         <img src="img/cart_img.png">
@@ -111,11 +104,33 @@
                     <div class="product-details">
                         <p class="product-description">Flugger Dekso 25 Краска полуматовая с очень высокой прочностью
                             для внутренних работ</p>
+                        <ul class="product_details_list">
+                            <li class="product_details_item">
+                                <p>0.75 л</p>
+                            </li>
+                            <li class="product_details_item">
+                                <p>Полуматовый</p>
+                            </li>
+                            <li class="product_details_item product_details_color_o">
+                                <p>Flugger 900 FL 1358</p>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="product-price">3360</div>
-                    <div class="product-quantity">
-                        <input type="number" value="2" min="1">
+
+                    <div class="product-price">3360 ₽
+
                     </div>
+
+                    <div class="product-line-price-wrp">
+                        <div class="product-line-price">3360 ₽
+                        </div>
+                        <div class="product_details_item">
+                            <div class="product-quantity">
+                                <input type="number" value="1" min="1">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="product-removal">
                         <button class="remove-product">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18"
@@ -129,51 +144,111 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="product-line-price">3360</div>
                 </div>
 
                 <div class="product">
                     <div class="product-image">
-                        <img src="https://s.cdpn.io/3/large-NutroNaturalChoiceAdultLambMealandRiceDryDogFood.png">
+                        <img src="img/cart_img.png">
                     </div>
                     <div class="product-details">
-                        <div class="product-title">Nutro™ Adult Lamb and Rice Dog Food</div>
-                        <p class="product-description">Who doesn't like lamb and rice? We've all hit the halal cart at
-                            3am while quasi-blackout after a night of binge drinking in Manhattan. Now it's your dog's
-                            turn!</p>
+                        <p class="product-description">Flugger Dekso 25 Краска полуматовая с очень высокой прочностью
+                            для внутренних работ</p>
+                        <ul class="product_details_list">
+                            <li class="product_details_item">
+                                <p>2.8 л</p>
+                            </li>
+                            <li class="product_details_item">
+                                <p>Полуматовый</p>
+                            </li>
+                            <li class="product_details_item product_details_color_f">
+                                <p>Flugger 900 FL 1358</p>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="product-price">45.99</div>
-                    <div class="product-quantity">
-                        <input type="number" value="1" min="1">
+
+                    <div class="product-price">3360 ₽
+
                     </div>
+
+                    <div class="product-line-price-wrp">
+                        <div class="product-line-price">3360 ₽
+                        </div>
+                        <div class="product_details_item">
+                            <div class="product-quantity">
+                                <input type="number" value="1" min="1">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="product-removal">
                         <button class="remove-product">
-                            Remove
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" viewBox="0 0 16 18"
+                                fill="none">
+                                <path
+                                    d="M15.4326 3.33054C14.1126 3.19665 12.7927 3.09623 11.4645 3.02092V3.01255L11.2841 1.92469C11.1612 1.15481 10.9808 0 9.06233 0H6.91431C5.00405 0 4.82368 1.1046 4.6925 1.91632L4.52033 2.98745C3.75787 3.03766 2.9954 3.08787 2.23294 3.16318L0.560433 3.33054C0.216094 3.36402 -0.0298628 3.67364 0.00293141 4.01674C0.0357256 4.35983 0.330873 4.61088 0.675213 4.57741L2.34772 4.41004C6.64376 3.9749 10.9726 4.14226 15.3178 4.58577C15.3424 4.58577 15.3588 4.58577 15.3834 4.58577C15.695 4.58577 15.9655 4.3431 15.9983 4.01674C16.0229 3.67364 15.7769 3.36402 15.4326 3.33054Z"
+                                    fill="#9293B0" />
+                                <path
+                                    d="M13.9241 5.76581C13.7273 5.55661 13.4568 5.43945 13.178 5.43945H2.81505C2.53629 5.43945 2.25754 5.55661 2.06898 5.76581C1.88041 5.97502 1.77383 6.25954 1.79023 6.55242L2.29854 15.1382C2.38872 16.4102 2.5035 18.0001 5.36479 18.0001H10.6283C13.4896 18.0001 13.6043 16.4185 13.6945 15.1382L14.2028 6.56079C14.2192 6.25954 14.1126 5.97502 13.9241 5.76581ZM9.35749 13.8077H6.62737C6.29123 13.8077 6.01248 13.5231 6.01248 13.18C6.01248 12.8369 6.29123 12.5524 6.62737 12.5524H9.35749C9.69363 12.5524 9.97238 12.8369 9.97238 13.18C9.97238 13.5231 9.69363 13.8077 9.35749 13.8077ZM10.0462 10.4604H5.94689C5.61075 10.4604 5.332 10.1759 5.332 9.83276C5.332 9.48966 5.61075 9.20514 5.94689 9.20514H10.0462C10.3823 9.20514 10.6611 9.48966 10.6611 9.83276C10.6611 10.1759 10.3823 10.4604 10.0462 10.4604Z"
+                                    fill="#9293B0" />
+                            </svg>
                         </button>
                     </div>
-                    <div class="product-line-price">45.99</div>
                 </div>
 
                 <div class="totals">
                     <div class="totals-item">
-                        <label>Subtotal</label>
-                        <div class="totals-value" id="cart-subtotal">71.97</div>
+                        <label>Итого:</label>
+                        <div class="totals-value" id="cart-subtotal">6720</div>
                     </div>
-                    <div class="totals-item">
+                    <div class="totals-item" style="display: none;">
                         <label>Tax (5%)</label>
                         <div class="totals-value" id="cart-tax">3.60</div>
                     </div>
-                    <div class="totals-item">
+                    <div class="totals-item" style="display: none;">
                         <label>Shipping</label>
                         <div class="totals-value" id="cart-shipping">15.00</div>
                     </div>
-                    <div class="totals-item totals-item-total">
+                    <div class="totals-item totals-item-total" style="display: none;">
                         <label>Grand Total</label>
                         <div class="totals-value" id="cart-total">90.57</div>
                     </div>
                 </div>
-
-                <button class="checkout">Checkout</button>
+                <ul class="cart_button_list">
+                    <li class="cart_button_item">
+                        <button class="all_category cart_button_style_fast">Купить в 1 клик
+                            <svg class="all_category_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
+                                viewBox="0 0 24 25" fill="none">
+                                <path d="M14.4302 6.42993L20.5002 12.4999L14.4302 18.5699"
+                                    stroke="url(#paint0_linear_2090_1140)" stroke-width="2" stroke-miterlimit="10"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M3.5 12.5H20.33" stroke="url(#paint1_linear_2090_1140)" stroke-width="2"
+                                    stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                                <defs>
+                                    <linearGradient id="paint0_linear_2090_1140" x1="14.4302" y1="6.42993" x2="21.2006"
+                                        y2="6.77831" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#DD3197" />
+                                        <stop offset="1" stop-color="#822FAF" />
+                                    </linearGradient>
+                                    <linearGradient id="paint1_linear_2090_1140" x1="3.5" y1="12.5" x2="8.20568"
+                                        y2="20.6502" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#DD3197" />
+                                        <stop offset="1" stop-color="#822FAF" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                        </button>
+                    </li>
+                    <li class="cart_button_item">
+                        <button class="all_category cart_button_style_move">Перейти в корзину
+                            <svg class="all_category_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none">
+                                <path
+                                    d="M3 4.79219C3 4.35318 3.35318 4 3.79219 4H5.29404C6.02022 4 6.66387 4.4225 6.96424 5.05625H20.5305C21.3986 5.05625 22.0323 5.88145 21.8046 6.71984L20.4512 11.7469C20.1707 12.7834 19.2299 13.5062 18.1572 13.5062H8.63443L8.81268 14.447C8.88529 14.82 9.21207 15.0906 9.59166 15.0906H19.1078C19.5468 15.0906 19.9 15.4438 19.9 15.8828C19.9 16.3218 19.5468 16.675 19.1078 16.675H9.59166C8.44959 16.675 7.46926 15.863 7.25801 14.744L5.55481 5.79893C5.5317 5.6735 5.42277 5.58437 5.29404 5.58437H3.79219C3.35318 5.58437 3 5.23119 3 4.79219ZM7.225 19.3156C7.225 19.1076 7.26598 18.9015 7.3456 18.7093C7.42523 18.5171 7.54193 18.3424 7.68905 18.1953C7.83618 18.0482 8.01084 17.9315 8.20306 17.8519C8.39529 17.7722 8.60131 17.7312 8.80938 17.7312C9.01744 17.7312 9.22346 17.7722 9.41569 17.8519C9.60792 17.9315 9.78258 18.0482 9.9297 18.1953C10.0768 18.3424 10.1935 18.5171 10.2731 18.7093C10.3528 18.9015 10.3938 19.1076 10.3938 19.3156C10.3938 19.5237 10.3528 19.7297 10.2731 19.9219C10.1935 20.1142 10.0768 20.2888 9.9297 20.4359C9.78258 20.5831 9.60792 20.6998 9.41569 20.7794C9.22346 20.859 9.01744 20.9 8.80938 20.9C8.60131 20.9 8.39529 20.859 8.20306 20.7794C8.01084 20.6998 7.83618 20.5831 7.68905 20.4359C7.54193 20.2888 7.42523 20.1142 7.3456 19.9219C7.26598 19.7297 7.225 19.5237 7.225 19.3156ZM18.3156 17.7312C18.7358 17.7312 19.1388 17.8982 19.436 18.1953C19.7331 18.4924 19.9 18.8954 19.9 19.3156C19.9 19.7358 19.7331 20.1388 19.436 20.4359C19.1388 20.7331 18.7358 20.9 18.3156 20.9C17.8954 20.9 17.4924 20.7331 17.1953 20.4359C16.8982 20.1388 16.7313 19.7358 16.7313 19.3156C16.7313 18.8954 16.8982 18.4924 17.1953 18.1953C17.4924 17.8982 17.8954 17.7312 18.3156 17.7312Z"
+                                    fill="white" />
+                            </svg>
+                        </button>
+                    </li>
+                </ul>
 
             </div>
         </section>
