--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <div class="navigation center">
                 <ul class="header_address">
                     <li><a class="map_address" href="">Магазины</a></li>
-                    <li><a class="mail_address" href="mailto:info@kraskizdes.ru">info@kraskizdes.ru</a></li>
+                    <li class="header_address_mail"><a class="mail_address"
+                            href="mailto:info@kraskizdes.ru">info@kraskizdes.ru</a></li>
+                    <li><a href="#" class="header_logo_hidden"><img src="img/main_logo.png" alt="main_logo"></a></li>
+                    <li><a href="#" class="header_tel_hidden">nomber</a></li>
                 </ul>
                 <ul class="header_links">
                     <li class="header_links_name"><a href="#">Доставка</a></li>
@@ -31,6 +34,13 @@
             </div>
         </nav>
         <section class="header_menu center">
+            <div class="menu_burger_hidden"><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 16" fill="none">
+                        <path
+                            d="M1.5 3.5L18.5 3.5C18.8978 3.5 19.2794 3.34197 19.5607 3.06066C19.842 2.77936 20 2.39783 20 2C20 1.60218 19.842 1.22065 19.5607 0.939343C19.2794 0.658038 18.8978 0.500003 18.5 0.500003L1.5 0.5C1.10218 0.5 0.720644 0.658035 0.43934 0.93934C0.158035 1.22064 -1.9271e-07 1.60218 -2.62268e-07 2C-3.31826e-07 2.39782 0.158035 2.77936 0.439339 3.06066C0.720644 3.34197 1.10217 3.5 1.5 3.5ZM18.5 6.5L1.5 6.5C1.10217 6.5 0.720643 6.65804 0.439339 6.93934C0.158034 7.22064 -1.24178e-06 7.60218 -1.31134e-06 8C-1.3809e-06 8.39782 0.158034 8.77936 0.439338 9.06066C0.720643 9.34196 1.10217 9.5 1.5 9.5L18.5 9.5C18.8978 9.5 19.2794 9.34197 19.5607 9.06066C19.842 8.77936 20 8.39783 20 8C20 7.60218 19.842 7.22065 19.5607 6.93934C19.2794 6.65804 18.8978 6.5 18.5 6.5ZM18.5 12.5L1.5 12.5C1.10217 12.5 0.720642 12.658 0.439338 12.9393C0.158033 13.2206 -2.29086e-06 13.6022 -2.36041e-06 14C-2.42997e-06 14.3978 0.158033 14.7794 0.439337 15.0607C0.720642 15.342 1.10217 15.5 1.5 15.5L18.5 15.5C18.8978 15.5 19.2794 15.342 19.5607 15.0607C19.842 14.7794 20 14.3978 20 14C20 13.6022 19.842 13.2206 19.5607 12.9393C19.2794 12.658 18.8978 12.5 18.5 12.5Z"
+                            fill="white" />
+                    </svg>
+                </a></div>
             <div class="main_logo_wrp">
                 <a href="#" class="main_logo">
                     <img src="img/main_logo.png" alt="main_logo">
@@ -92,7 +102,6 @@
             </ul>
 
             <!-- cart -->
-
             <div class="shopping-cart center" id="cart">
 
                 <p class="cart_title">Корзина</p>
@@ -216,40 +225,23 @@
                 <ul class="cart_button_list">
                     <li class="cart_button_item">
                         <button class="all_category cart_button_style_fast">Купить в 1 клик
-                            <svg class="all_category_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25"
-                                viewBox="0 0 24 25" fill="none">
-                                <path d="M14.4302 6.42993L20.5002 12.4999L14.4302 18.5699"
-                                    stroke="url(#paint0_linear_2090_1140)" stroke-width="2" stroke-miterlimit="10"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                                <path d="M3.5 12.5H20.33" stroke="url(#paint1_linear_2090_1140)" stroke-width="2"
-                                    stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                                <defs>
-                                    <linearGradient id="paint0_linear_2090_1140" x1="14.4302" y1="6.42993" x2="21.2006"
-                                        y2="6.77831" gradientUnits="userSpaceOnUse">
-                                        <stop stop-color="#DD3197" />
-                                        <stop offset="1" stop-color="#822FAF" />
-                                    </linearGradient>
-                                    <linearGradient id="paint1_linear_2090_1140" x1="3.5" y1="12.5" x2="8.20568"
-                                        y2="20.6502" gradientUnits="userSpaceOnUse">
-                                        <stop stop-color="#DD3197" />
-                                        <stop offset="1" stop-color="#822FAF" />
-                                    </linearGradient>
-                                </defs>
-                            </svg>
+                            <img src="img/arrow-right.svg" alt="arrow-right">
                         </button>
                     </li>
                     <li class="cart_button_item">
                         <button class="all_category cart_button_style_move">Перейти в корзину
-                            <svg class="all_category_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            <svg class="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <path
                                     d="M3 4.79219C3 4.35318 3.35318 4 3.79219 4H5.29404C6.02022 4 6.66387 4.4225 6.96424 5.05625H20.5305C21.3986 5.05625 22.0323 5.88145 21.8046 6.71984L20.4512 11.7469C20.1707 12.7834 19.2299 13.5062 18.1572 13.5062H8.63443L8.81268 14.447C8.88529 14.82 9.21207 15.0906 9.59166 15.0906H19.1078C19.5468 15.0906 19.9 15.4438 19.9 15.8828C19.9 16.3218 19.5468 16.675 19.1078 16.675H9.59166C8.44959 16.675 7.46926 15.863 7.25801 14.744L5.55481 5.79893C5.5317 5.6735 5.42277 5.58437 5.29404 5.58437H3.79219C3.35318 5.58437 3 5.23119 3 4.79219ZM7.225 19.3156C7.225 19.1076 7.26598 18.9015 7.3456 18.7093C7.42523 18.5171 7.54193 18.3424 7.68905 18.1953C7.83618 18.0482 8.01084 17.9315 8.20306 17.8519C8.39529 17.7722 8.60131 17.7312 8.80938 17.7312C9.01744 17.7312 9.22346 17.7722 9.41569 17.8519C9.60792 17.9315 9.78258 18.0482 9.9297 18.1953C10.0768 18.3424 10.1935 18.5171 10.2731 18.7093C10.3528 18.9015 10.3938 19.1076 10.3938 19.3156C10.3938 19.5237 10.3528 19.7297 10.2731 19.9219C10.1935 20.1142 10.0768 20.2888 9.9297 20.4359C9.78258 20.5831 9.60792 20.6998 9.41569 20.7794C9.22346 20.859 9.01744 20.9 8.80938 20.9C8.60131 20.9 8.39529 20.859 8.20306 20.7794C8.01084 20.6998 7.83618 20.5831 7.68905 20.4359C7.54193 20.2888 7.42523 20.1142 7.3456 19.9219C7.26598 19.7297 7.225 19.5237 7.225 19.3156ZM18.3156 17.7312C18.7358 17.7312 19.1388 17.8982 19.436 18.1953C19.7331 18.4924 19.9 18.8954 19.9 19.3156C19.9 19.7358 19.7331 20.1388 19.436 20.4359C19.1388 20.7331 18.7358 20.9 18.3156 20.9C17.8954 20.9 17.4924 20.7331 17.1953 20.4359C16.8982 20.1388 16.7313 19.7358 16.7313 19.3156C16.7313 18.8954 16.8982 18.4924 17.1953 18.1953C17.4924 17.8982 17.8954 17.7312 18.3156 17.7312Z"
                                     fill="white" />
                             </svg>
+
                         </button>
                     </li>
                 </ul>
 
+                <!-- <div class="close-button" onclick="closeCart()">X</div> -->
             </div>
         </section>
 
@@ -378,7 +370,9 @@
                     <p class="small_slide_mian_txt">Benjamin Moore Regal Select 549 <wbr> Waterborne Interior Paint Eggshell
                     </p>
                     <p class="small_slide_value">0.95&nbsp;л &bull; 2&nbsp;л</p>
-                    <p class="small_slide_price">от 3600 ₽<span class="small_slide_old_price">4500 ₽</span></p>
+                    <p class="small_slide_price">3600 ₽
+                        <span class="small_slide_old_price">4500 ₽</span>
+                    </p>
                     <button class="slider_cart_icon">
 
                     </button>
@@ -391,7 +385,9 @@
                     <p class="small_slide_mian_txt">Benjamin Moore Aura 532 Bath & <wbr> Spa Waterborne Interior Paint Matte Finish
                     </p>
                     <p class="small_slide_value">0.95&nbsp;л &bull; 2&nbsp;л</p>
-                    <p class="small_slide_price">5200 ₽<span class="small_slide_old_price">5720 ₽</span></p>
+                    <p class="small_slide_price">5200 ₽
+                        <span class="small_slide_old_price">5720 ₽</span>
+                    </p>
                     <button class="slider_cart_icon">
 
                     </button>
@@ -421,7 +417,9 @@
                     <p class="small_slide_mian_txt">Benjamin Moore Regal Select 549 <wbr> Waterborne Interior Paint Eggshell
                     </p>
                     <p class="small_slide_value">0.95&nbsp;л &bull; 2&nbsp;л</p>
-                    <p class="small_slide_price">от 3600 ₽<span class="small_slide_old_price">4500 ₽</span></p>
+                    <p class="small_slide_price">3600 ₽
+                        <span class="small_slide_old_price">4500 ₽</span>
+                    </p>
                     <button class="slider_cart_icon">
 
                     </button>
@@ -434,7 +432,9 @@
                     <p class="small_slide_mian_txt">Benjamin Moore Aura 532 Bath & <wbr> Spa Waterborne Interior Paint Matte Finish
                     </p>
                     <p class="small_slide_value">0.95&nbsp;л &bull; 2&nbsp;л</p>
-                    <p class="small_slide_price">5200 ₽<span class="small_slide_old_price">5720 ₽</span></p>
+                    <p class="small_slide_price">5200 ₽
+                        <span class="small_slide_old_price">5720 ₽</span>
+                    </p>
                     <button class="slider_cart_icon">
 
                     </button>
