--- a/index.html
+++ b/index.html
@@ -573,7 +573,8 @@
                             <span class="category_count">500+ товаров</span>
                         </a>
                     </li>
-                    <li class="category_slide_item">
+
+                    <!-- <li class="category_slide_item">
                         <img src="img/category_1.png" alt="Image 1">
                         <a href="#category_anchor" class="category_slide_item_link">Краски для стен
                             <span class="category_count">500+ товаров</span>
@@ -600,7 +601,7 @@
                         <a href="#category_anchor" class="category_slide_item_link">Краски для пола
                             <span class="category_count">500+ товаров</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
                 <button class="prev_button"></button>
                 <button class="next_button"></button>
@@ -751,6 +752,7 @@
             <button class="other_next_button"></button>
         </section>
 
+
         <section class="form_container center">
             <div class="form_img_wrp">
                 <img class="form_img" src="img/form_img.png" alt="img_form">
@@ -824,6 +826,11 @@
     </main>
     <footer class="footer center" id="footer">
         <div class="footer_container">
+            <div class="main_logo_wrp_hidden">
+                <a href="#" class="main_logo">
+                    <img src="img/main_logo.png" alt="main_logo">
+                </a>
+            </div>
             <ul class="footer_container_list">
                 <li class="footer_column footer_column_logo">
                     <div class="main_logo_wrp footer_logo">
@@ -857,7 +864,7 @@
                             <a href="#footer" class="footer_link_item_youtube"><img src="img/youtube_icon.svg"
                                     alt="youtube"></a>
                         </li>
-                        <li class="footer_link">
+                        <li class="footer_link footer_pay_system">
                             <div class=""><img src="img/pay_system.svg" alt="pay_system"></div>
                         </li>
                     </ul>
